# apps/api/src/modules/watchlist/application/dto/response/add-watchlist-content.response.validator.ts
@@ -1,0 +1,6 @@
+import z from "zod";
+import { watchlistSchema } from "../../validators/watchlist.validators";
+
+export const addWatchlistContentResponseValidator = watchlistSchema
+
+export type AddWatchlistContentResponse = z.infer<typeof addWatchlistContentResponseValidator>;
